<resources>
    <string name="LoginIp">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ`¬!"£$%^*()~=#{}[];',.:/?/*-_+&#060;&#062;&#064;&#038;</string>
    <string name="app_name">8K掌中宝</string>
    <string name="PressAgainToExit">再按一次退出</string>
    <string name="ServerAddress">服务器地址</string>
    <string name="UserName">用户名</string>
    <string name="UserPwd">用户密码</string>
    <string name="Login">登录</string>
    <string name="PleaseReenter">请重新输入</string>
    <string name="applicationManagement">请在应用管理中打开“相机/相册”访问权限！</string>
    <string name="album">相册</string>
    <string name="Photograph">照相机</string>
    <string name="cancel">取消</string>
    <string name="Updatasuccess">修改成功</string>
    <string name="Updatafailed">修改失败</string>
    <string name="Addsuccess">保存成功</string>
    <string name="Addfailed">保存失败</string>
    <string name="SavePassWord">记住密码</string>
    <string name="AutoLogin">自动登录</string>
    <string name="Home">主页</string>
    <string name="Strategy">策略控制</string>
    <string name="Control">实时控制</string>
    <string name="Alert">警报提醒</string>
    <string name="Set">设置</string>
    <string name="StatisticsKW">能耗统计（KW）</string>
    <string name="host">主机</string>
    <string name="SubControl">分控</string>
    <string name="Lamp">路灯</string>
    <string name="LastMonth">上月</string>
    <string name="ThisMonth">本月</string>
    <string name="ThisYear">今年</string>
    <string name="AlertContent">警报内容</string>
    <string name="AlarmTime">警报时间</string>
    <string name="AlarmType">警报类型</string>
    <string name="BasicInformation">基础信息</string>
    <string name="DeviceSettings">设备管理</string>
    <string name="GroupingSetting">分组配置</string>
    <string name="StrategySetting">策略配置</string>
    <string name="SystemHint">系统提示</string>
    <string name="ConfirmExit">是否退出？</string>
    <string name="OK">确定</string>
    <string name="No">取消</string>
    <string name="ExitSystem">退出系统</string>
    <string name="LoopControl">回路控制</string>
    <string name="SingleLightControl">单灯控制</string>
    <string name="GroupLightControl">群灯控制</string>
    <string name="GroupControl">分组控制</string>
    <string name="MapControl">地图控制</string>
    <string name="AccountInformation">个人信息</string>
    <string name="HeadPortrait">头像</string>
    <string name="NickName">昵称 </string>
    <string name="AccountNumber">账号 </string>
    <string name="Telephone">电话 </string>
    <string name="Email">邮箱 </string>
    <string name="Loading">加载中</string>
    <string name="PleaseLoading">正在加载,请稍候!</string>
    <string name="Pleasecheckthelightsnetwork">请检查灯具或者网络！</string>
    <string name="Currentlynoinformation">当前无信息</string>
    <string name="BasicsInfo">基础信息</string>
    <string name="orginfo">机构信息</string>
    <string name="OperatorList">操作员列表</string>
    <string name="ProjectInformation">项目信息</string>
    <string name="PleaseCheckTheNetwork">请检查网络或重新登录！</string>
    <string name="OrganizationName">机构名称</string>
    <string name="address">地址 </string>
    <string name="contact">联系人 </string>
    <string name="deleteUser">删除操作员</string>
    <string name="delete">是否删除？</string>
    <string name="DeleteSuccessfully">删除成功</string>
    <string name="DeleteFailed">删除失败</string>
    <string name="PleaseAddItemInformationFirst">请添加项目信息</string>
    <string name="AssignmentItem">分配项目</string>
    <string name="AssignmentComplete">分配完成</string>
    <string name="allocationFailed">分配失败</string>
    <string name="userList">操作员列表</string>
    <string name="deleteItem">删除项目</string>
    <string name="UserNameMustNotBeLessThan6Bits">用户名不能小于6位</string>
    <string name="PasswordMustNotBeLessThan6Bits">密码不能小于6位</string>
    <string name="TheNameCannotBeEmpty">姓名不能为空</string>
    <string name="NicknamesCannotBeEmpty">昵称不能为空</string>
    <string name="TheTelephoneCannotBeEmpty">电话不能为空</string>
    <string name="EmailCannotBeEmpty">Email不能为空</string>
    <string name="RemarksCannotBeNull">备注不能为空</string>
    <string name="Add">添加</string>
    <string name="WhetherToAdd">是否？</string>
    <string name="revise">修改</string>
    <string name="Modify">是否修改?</string>
    <string name="TheNameMustNotBeLessThan2Bits">名称不能小于2位</string>
    <string name="ContactsMustNotBeLessThan1Bits">联系人不能小于1位</string>
    <string name="AddressCannotBeEmpty">地址不能为空</string>
    <string name="AddOperator">添加操作员</string>
    <string name="password">密码 </string>
    <string name="FullName">姓名 </string>
    <string name="note">备注 </string>
    <string name="AddItemInformationFirst">添加项目信息</string>
    <string name="name">名称</string>
    <string name="projectName">项目名称</string>
    <string name="ManagementProject">管理项目</string>
    <string name="hostManage">主机管理</string>
    <string name="lampManage">灯具管理</string>
    <string name="subManage">分控管理</string>
    <string name="deletes">删除</string>
    <string name="PleaseEnterTheCorrectName">请输入正确名称</string>
    <string name="TheRegistryPackageMustBe6BitPureNumbers">注册包必须为6位纯数字</string>
    <string name="TheHeartbeatPacketMustBe6BitPureDigits">心跳包必须为6位纯数字</string>
    <string name="NoMoreThan13Calls">电话不能大于13位</string>
    <string name="PleaseEnterTheCorrectAddress">请输入正确地址</string>
    <string name="PleaseInputMemoInformation">请输入备注信息</string>
    <string name="AddHost">添加主机</string>
    <string name="project">项目</string>
    <string name="HostName">主机名称</string>
    <string name="RegPackage">注册包</string>
    <string name="Heart">心跳包</string>
    <string name="longitude">经度</string>
    <string name="latitude">纬度</string>
    <string name="hostList">主机列表</string>
    <string name="hostinfo">主机信息</string>
    <string name="single">单分控</string>
    <string name="Double">双分控</string>
    <string name="all">全部</string>
    <string name="EnterNumberOfLights">输入灯光数量</string>
    <string name="PleaseSelectTheSubControlType">请选择分控类型</string>
    <string name="PleaseSelectTheDimmingPort">请选择调光端口</string>
    <string name="AddLamps">添加灯具</string>
    <string name="LuminaireQuantity">灯具数量</string>
    <string name="SubType">分控类型</string>
    <string name="DimmingPort">调光端口</string>
    <string name="SelectHost">选择主机</string>
    <string name="lampInfo">灯具信息</string>
    <string name="lampNumb">灯光编号</string>
    <string name="TheNameLengthMustNotBeLessThan1">名称的长度不能小于1</string>
    <string name="AddressLengthMustNotBeLessThan1">地址的长度不能小于1</string>
    <string name="RemarkLengthMustNotBeLessThan1">备注的长度不能小于1</string>
    <string name="PleaseaAddLongitude">请添加经度</string>
    <string name="PleaseAddLatitude">请添加纬度</string>
    <string name="subInfo">分控信息</string>
    <string name="SubNumb">分控编号</string>
    <string name="type">类型</string>
    <string name="GroupConfigure">分组配置</string>
    <string name="describe">描述</string>
    <string name="Selected">选择</string>
    <string name="item">项</string>
    <string name="PleaseSelectData">请选择数据</string>
    <string name="PleaseCheckToSeeIfItIsOnline">请检查主机或分控是否在线</string>
    <string name="GroupingContentSettings">分组内容设置</string>
    <string name="CheckAll">全选</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="OneStage">一级</string>
    <string name="TwoStage">二级</string>
    <string name="ThreeStage">三级</string>
    <string name="FourStage">四级</string>
    <string name="day">天</string>
    <string name="week">周</string>
    <string name="month">月</string>
    <string name="year">年</string>
    <string name="Monday">星期一</string>
    <string name="Tuesday">星期二</string>
    <string name="Wednesday">星期三</string>
    <string name="Thursday">星期四</string>
    <string name="Friday">星期五</string>
    <string name="Saturday">星期六</string>
    <string name="Sunday">星期天</string>
    <string name="standardTime">标准时间</string>
    <string name="beforeSunrise">日出之前</string>
    <string name="AfterSunrise">日出后</string>
    <string name="BeforeSunset">日落前</string>
    <string name="AfterSunset">日落后</string>
    <string name="Group">分组</string>
    <string name="Loop">回路</string>
    <string name="PleaseSelectTheCorrectDate">请选择正确日期</string>
    <string name="PleaseEnterTheCorrectNumber">请输入正确编号</string>
    <string name="PleaseEnterTheCorrectBrightness">请输入正确亮度</string>
    <string name="PleaseSelectEnableSwitch">请选择使能开关</string>
    <string name="selectingPriority">请选择优先级</string>
    <string name="selectcycle">请选择周期</string>
    <string name="SelectStartWeek">请选择起始周</string>
    <string name="PleaseSelectEndWeeks">请选择结束周</string>
    <string name="PleaseSelectAReferencePoint">请选择参考点</string>
    <string name="PleaseSelectTriggerTime">请选择触发时间</string>
    <string name="PleaseSelectGroups">请选择分组</string>
    <string name="PleaseSelectDimming">请选择调光使能</string>
    <string name="PleaseSelectLoopSwitch">请选择回路开关</string>
    <string name="PleaseSelectLoop">请选择回路</string>
    <string name="PleaseSelectTheCorrectInformation">请选择正确信息</string>
    <string name="strategyadd">策略添加</string>
    <string name="numb">编号(1-30)</string>
    <string name="EnableSwitch">使能开关</string>
    <string name="priority">优先级</string>
    <string name="cycle">周期</string>
    <string name="effectiveDate">生效日期</string>
    <string name="ExpirationDate">失效日期</string>
    <string name="StartWeek">起始周</string>
    <string name="EndWeek">结束周</string>
    <string name="referencePoint">参考点</string>
    <string name="TriggerTime">触发时间</string>
    <string name="DimmingEnable">调光使能</string>
    <string name="Brightness">亮度(1-100):</string>
    <string name="LoopSwitch">回路开关</string>
    <string name="strategyupdata">策略修改</string>
    <string name="numbs">编号</string>
    <string name="LoopNumb">分控编号</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_seconds">秒</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="AllLampController">群灯控制</string>
    <string name="NetworkState">网络状态</string>
    <string name="UpdateTime">更新时间</string>
    <string name="LoopSet">回路设置</string>
    <string name="openLoop">开启回路</string>
    <string name="closeLoop">关闭回路</string>
    <string name="loopinfo">回路详情</string>
    <string name="oneLampC">单灯控制</string>
    <string name="BrightnessSetting">亮度设置</string>
    <string name="Port">端口</string>
    <string name="Brightnes">亮度:</string>
    <string name="Voltage">电压(V)</string>
    <string name="Electriccurrent">电流(A)</string>
    <string name="power">功率(W)</string>
    <string name="frequency">频率(HZ)</string>
    <string name="groupinfo">分组详情</string>
    <string name="PleaseLogInAgain">请重新登录</string>
    <string name="download">下载</string>
    <string name="Downloading">下载中....</string>
    <string name="DownloadComplete">下载完成</string>
    <string name="downloadOK">下载成功</string>
    <string name="Strategyinfo">策略详情</string>
    <string name="downloadNO">下载失败</string>
    <string name="groupname">分组名称</string>
    <string name="groupnumb">分组编号</string>
    <string name="openOK">开启成功</string>
    <string name="openNO">开启失败</string>
    <string name="closeOK">关闭成功</string>
    <string name="closeNO">关闭失败</string>
    <string name="AllLoop">开启全部</string>
    <string name="Loop1">回路1</string>
    <string name="Loop2">回路2</string>
    <string name="Loop3">回路3</string>
    <string name="Loop4">回路4</string>
    <string name="Loop5">回路5</string>
    <string name="Loop6">回路6</string>
    <string name="Loop7">回路7</string>
    <string name="Loop8">回路8</string>
    <string name="hoststate">主机状态</string>
    <string name="temperature">温度</string>
    <string name="Online">上线</string>
    <string name="Offline">下线</string>
    <string name="DimmingPortSelection">调光端口选择</string>
    <string name="LatitudeAndLongitudeSelection">经纬度选择</string>
    <string name="OperatorInformation">操作员信息</string>
    <string name="DataException">数据异常</string>
</resources>