<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context="com.zzb.sl.Login"
    android:gravity="center">
<RelativeLayout
        android:id="@+id/login_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <LinearLayout
        android:id="@+id/login_LlIP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <EditText
            android:id="@+id/login_etIp"
            android:drawablePadding="20dp"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:hint="@string/ServerAddress"
            android:text="http://iot-leyview.com:8011"
            android:singleLine="true"
            android:digits="@string/LoginIp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/login_LlName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_LlIP"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <EditText
            android:id="@+id/login_etName"
            android:drawablePadding="20dp"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:maxLength="16"
            android:textSize="20dp"
            android:hint="@string/UserName"
            android:singleLine="true"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/login_LlPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_LlName"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <EditText
            android:id="@+id/login_etPwd"
            android:drawablePadding="20dp"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:maxLength="16"
            android:textSize="20dp"
            android:singleLine="true"
            android:password="true"
            android:hint="@string/UserPwd"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/login_Llcb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_LlPwd"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <CheckBox
            android:id="@+id/remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SavePassWord" />

        <CheckBox
            android:id="@+id/autologin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AutoLogin" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/login_Llbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_Llcb"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_style"
            android:text="@string/Login" />
    </LinearLayout>


 </RelativeLayout>
</RelativeLayout>
