<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_time_controller"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBEBEB"
    tools:context="com.zzb.sl.TimeController.TimeController">
    <RelativeLayout
        android:id="@+id/timeContl_rl_Table"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/title"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/contro_item_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/right"
            android:layout_centerVertical="true"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Control"
                android:textColor="@color/bg_white"
                android:textSize="20dp" />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:background="@color/bg_white"
        android:layout_marginTop="2dp"
        android:id="@+id/timeContll_rl_Loop"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_horizontal"
        android:layout_below="@id/timeContl_rl_Table">
        <TextView
            android:id="@+id/timeContll_Loop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="20dp"
            android:text="@string/LoopControl"/>
    </RelativeLayout>
    <RelativeLayout
        android:background="@color/bg_white"
        android:layout_marginTop="2dp"
        android:id="@+id/timeContll_rl_lamp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_horizontal"
        android:layout_below="@id/timeContll_rl_Loop">
        <TextView
            android:id="@+id/timeContll_lamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="20dp"
            android:text="@string/SingleLightControl"/>
    </RelativeLayout>
    <RelativeLayout
        android:background="@color/bg_white"
        android:layout_marginTop="2dp"
        android:id="@+id/timeContll_rl_alllamp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_horizontal"
        android:layout_below="@id/timeContll_rl_lamp">
        <TextView
            android:id="@+id/timeContll_alllamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="20dp"
            android:text="@string/GroupLightControl"/>
    </RelativeLayout>
    <RelativeLayout
        android:background="@color/bg_white"
        android:layout_marginTop="2dp"
        android:id="@+id/timeContll_rl_group"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_horizontal"
        android:layout_below="@id/timeContll_rl_alllamp">
        <TextView
            android:id="@+id/timeContll_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="20dp"
            android:text="@string/GroupControl"/>
    </RelativeLayout>
    <RelativeLayout
        android:background="@color/bg_white"
        android:layout_marginTop="2dp"
        android:id="@+id/timeContll_rl_map"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_horizontal"
        android:layout_below="@id/timeContll_rl_group">
        <TextView
            android:id="@+id/timeContll_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="20dp"
            android:text="@string/MapControl"/>
    </RelativeLayout>
</RelativeLayout>
