<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_one_lamp_c"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zzb.sl.TimeController.OneLampController.OneLampCActivity">
    <RelativeLayout
        android:id="@+id/onelampc_list_rl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/title"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/onelampc_list_img2"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/right" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oneLampC"
                android:textColor="@color/bg_white"
                android:textSize="20dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="right">
            <ImageView
                android:id="@+id/onelampc_list_img3"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:src="@drawable/ok" />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/onelampc_list_type1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#E7A257"
        android:layout_below="@id/onelampc_list_rl">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/bg_white"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:textSize="16dp"
            android:text="@string/numbs"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/bg_white"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="16dp"
            android:text="@string/NetworkState"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/bg_white"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:textSize="16dp"
            android:text="@string/UpdateTime"
            />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/onelampc_list_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:layout_below="@id/onelampc_list_type1">

        <CheckBox
            android:id="@+id/onelampc_list_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:text="@string/CheckAll"
            android:visibility="gone"
            android:textColor="#969696"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/onelampc_list_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:visibility="gone"
            android:gravity="center_vertical"
            />
    </LinearLayout>
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/onelampc_list_srfl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/onelampc_list_ll">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/onelampc_list_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.v4.widget.SwipeRefreshLayout>
</RelativeLayout>
