<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_strategy_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zzb.sl.strategy.StrategyInfoActivity">
    <RelativeLayout
        android:id="@+id/Strategy_list_rl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/title"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/Strategy_list_img2"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/right" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/StrategySetting"
                android:textColor="@color/bg_white"
                android:textSize="20dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="right">
            <ImageView
                android:id="@+id/Strategy_list_img3"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:src="@drawable/add" />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/Strategy_list_rl_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_below="@id/Strategy_list_rl">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/numbs"
            android:layout_marginLeft="8dp"
            android:layout_centerVertical="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/name"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>
<RelativeLayout
    android:id="@+id/Strategy_list_rl_itemview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="1dp"
    android:layout_below="@id/Strategy_list_rl_text">
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/strategy_list_srfl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
      >
        <com.zzb.sl.strategy.strategyInfoCustomView.ItemRemoveRecyclerView
            android:id="@+id/strategy_item_irrlv"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </com.zzb.sl.strategy.strategyInfoCustomView.ItemRemoveRecyclerView>
    </android.support.v4.widget.SwipeRefreshLayout>
</RelativeLayout>
</RelativeLayout>
